<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_56"
    android:background="@color/white"
    android:baselineAligned="false"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/nav_home"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/nav_home_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/home_icon_selector" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/nav_home_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:textColor="@color/black"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/nav_contest"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/nav_contest_icon"
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:src="@drawable/contest_icon_selector" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/nav_contest_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contest"
            android:textSize="@dimen/text_12sp"
            android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/nav_upload"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/nav_upload_icon"
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:src="@drawable/ic_upload" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/nav_upload_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload"
            android:textSize="@dimen/text_12sp"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/nav_search"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/nav_search_icon"
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:src="@drawable/search_icon_selector" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/nav_search_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:textSize="@dimen/text_12sp"
            android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/nav_profile"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/nav_profile_icon"
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:src="@drawable/profile_icon_selector" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/nav_profile_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:textSize="@dimen/text_12sp"
            android:textColor="@color/black"/>
    </LinearLayout>


</LinearLayout>